--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.87MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-983.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: afd61db6-01fb-11ed-8000-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
+  - {name: 🇨🇦 加拿大-537.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇬🇧 英国-857.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-1.17MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
       - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
