--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: afd61db6-01fb-11ed-8000-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
-  - {name: 🇨🇦 加拿大-537.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-857.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.17MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-896.0KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇦 加拿大-224.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-240.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.54MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-484.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-700.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-993.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-537.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-857.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
