--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-896.0KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-224.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-240.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-484.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-700.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-993.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-575.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-516.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-896.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-240.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-700.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-993.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-575.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
