--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-516.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-484.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-730.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-758.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-311.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-345.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-534.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.51MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-902.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-557.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2, server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-458.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-516.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-730.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-534.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-557.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
